[package]
name = "emutk-vax"
version = "0.1.0"
authors = ["moonheart08 <moonheart08@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.2"
num-traits = "^0.2"
num-derive = "^0.3"
bytemuck = "^1.2"
emutk-core = { path = "../emutk-core" }
bit-vec = "0.6"

[features]
default = ["noncompliant_extensions"]

noncompliant_extensions = ["64bit", "128bit"]
64bit = []
128bit = []