[package]
name = "tablegen-proc"
version = "0.1.0"
authors = ["moonheart08 <moonheart08@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0.21"
features = ["extra-traits", "full"]